# quid

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  shell.nix
docs/: roadmap.md  whitepaper.md
quid-blockchain/: Cargo.toml
quid-blockchain/src/: adapters.rs  bitcoin.rs  config.rs  ethereum.rs  lib.rs  privacy.rs  universal.rs  utils.rs
quid-browser-extension/: package-lock.json  package.json
quid-browser-extension/options/: options.html
quid-browser-extension/scripts/: build.js
quid-browser-extension/src/: background.js
quid-browser-extension/tests/: browser_extension.test.js  setup.js
quid-cli/: Cargo.toml
quid-cli/src/: main.rs
quid-consensus/: Cargo.toml
quid-consensus/src/: chain.rs  consensus.rs  error.rs  lib.rs  privacy.rs  transaction.rs  validator.rs
quid-consensus/tests/: integration_test.rs
quid-core/: Cargo.toml
quid-core/benches/: crypto_bench.rs
quid-core/src/: crypto.rs  error.rs  identity.rs  lib.rs  recovery.rs  security.rs  storage.rs
quid-core/src/network/: mixnet.rs  mod.rs  obfuscation.rs  privacy.rs  relay.rs  tor.rs
quid-core/tests/: integration_tests.proptest-regressions  integration_tests.rs  security_tests.rs
quid-desktop/: Cargo.toml
quid-desktop/src/: auth.rs  integration.rs  lib.rs  notifications.rs  platform.rs  storage.rs  ui.rs
quid-desktop/tests/: desktop_integration_tests.rs
quid-exchange/: Cargo.toml
quid-exchange/src/: api.rs  auth.rs  config.rs  error.rs  lib.rs  portfolio.rs  trading.rs  types.rs
quid-exchange/src/exchanges/: binance.rs  coinbase.rs  kraken.rs  mod.rs  okx.rs
quid-extensions/: Cargo.toml
quid-extensions/src/: adapter.rs  error.rs  key_derivation.rs  lib.rs  registry.rs
quid-extensions/src/adapters/: generic.rs  mod.rs  ssh.rs  web.rs
quid-flutter/: pubspec.yaml
quid-flutter/lib/: quid_flutter.dart
quid-flutter/lib/src/models/: enums.dart
quid-js-sdk/: README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json
quid-js-sdk/examples/react/: App.tsx
quid-js-sdk/examples/vanilla/: index.html
quid-js-sdk/examples/vue/: App.vue
quid-js-sdk/src/: browser-types.ts  index.ts  types.ts
quid-js-sdk/src/components/: signin-button.ts
quid-js-sdk/src/components/react/: signin-button.tsx  use-quid.ts
quid-js-sdk/src/components/vue/: signin-button.vue
quid-js-sdk/src/core/: extension-connector.ts  quid-client.ts  webauthn-bridge.ts
quid-js-sdk/src/oauth/: oauth-client.ts
quid-js-sdk/src/utils/: event-emitter.ts  logger.ts
quid-js-sdk/test/: quid-client.test.ts  setup.js
quid-mobile/ios/: Package.swift
quid-mobile/ios/Sources/QuIDiOS/: BiometricAuthManager.swift  IdentityManager.swift  KeychainManager.swift  QuIDClient.swift  QuIDTypes.swift  SecureEnclaveManager.swift
quid-mobile/ios/Tests/QuIDiOSTests/: QuIDiOSTests.swift
quid-multisig/: Cargo.toml
quid-multisig/src/: config.rs  error.rs  lib.rs  recovery.rs  secret_sharing.rs  social.rs  threshold.rs  timelock.rs  types.rs
quid-network/: Cargo.toml
quid-network/src/: dht.rs  domain.rs  error.rs  lib.rs
quid-node/: Cargo.toml
quid-node/src/: main.rs
quid-nostr/: Cargo.toml
quid-nostr/src/: client.rs  config.rs  crypto.rs  error.rs  event.rs  lib.rs  lightning.rs  nips.rs  relay.rs
quid-nym-adapter/: Cargo.toml
quid-nym-adapter/src/: address.rs  config.rs  error.rs  lib.rs  privacy.rs  smart_contracts.rs  transaction.rs  types.rs
quid-react-native/: README.md  package.json  tsconfig.build.json  tsconfig.json
quid-react-native/example/: App.tsx
quid-react-native/src/: QuIDClient.ts  index.ts  types.ts
quid-react-native/src/components/: QuIDIdentityList.tsx  QuIDQRGenerator.tsx  QuIDQRScanner.tsx  QuIDSignInButton.tsx  index.ts
quid-react-native/src/hooks/: index.ts  useDeviceCapabilities.ts  useQRAuth.ts  useQuIDAuth.ts  useQuIDClient.ts  useQuIDIdentities.ts
quid-react-native/src/utils/: crypto.ts  index.ts  notifications.ts  validation.ts
quid-ssh/: Cargo.toml
quid-ssh/src/: certificate.rs  client.rs  config.rs  keys.rs  lib.rs  migration.rs  server.rs
quid-tls/: Cargo.toml
quid-tls/src/: cert.rs  client.rs  config.rs  lib.rs  pki.rs  server.rs  x509.rs
quid-wallet/: Cargo.toml
quid-wallet/src/: config.rs  error.rs  hardware.rs  lib.rs  portfolio.rs  software.rs  types.rs
quid-zkp/: Cargo.toml
quid-zkp/src/: bulletproofs.rs  commitments.rs  config.rs  error.rs  lib.rs  merkle.rs  proofs.rs  snarks.rs  starks.rs  verifier.rs
scripts/: test.sh
