[workspace]
members = [
    "quid-core",
    "quid-cli",
    "quid-extensions",
    "quid-desktop",
    "quid-ssh",
    "quid-tls",
    # "quid-blockchain",  # Temporarily disabled due to dependency conflicts
    "quid-wallet",
    "quid-exchange",
    "quid-multisig",
    "quid-nym-adapter",
    "quid-nostr",
    "quid-zkp"
]
resolver = "2"

[workspace.dependencies]
# Quantum-resistant cryptography - temporarily disabled
# oqs = "0.10"
# pqcrypto-dilithium = "0.5"
# pqcrypto-kyber = "0.8"
sha3 = "0.10"

# Security and memory management
zeroize = { version = "1.7", features = ["derive"] }
secrecy = { version = "0.8", features = ["serde", "alloc"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

base64 = "0.21"
rand = "0.8"

# Testing
proptest = "1.4"
hex = "0.4"

tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"

# Wallet integration
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]  
pedantic = "warn"