[package]
name = "quid-consensus"
version = "0.1.0"
edition = "2021"
description = "Minimal consensus layer for NYM tokens"

[dependencies]
quid-core = { path = "../quid-core" }
quid-consensus = { path = "../quid-consensus" }
clap = { version = "4.0", features = ["derive"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
secrecy = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
