[package]
name = "quid-core"
version = "0.1.0"
edition = "2021"
description = "Core quantum-resistant identity protocol implementation"
license = "MIT OR Apache-2.0"

[dependencies]
# Inherit from workspace
sha3 = { workspace = true }
zeroize = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[[bench]]
name = "crypto_bench"
harness = false