[package]
name = "quid-exchange"
version = "0.1.0"
edition = "2021"
description = "QuID exchange integration for cryptocurrency trading platforms"
license = "MIT OR Apache-2.0"

[dependencies]
# Inherit from workspace
quid-core = { path = "../quid-core" }
quid-wallet = { path = "../quid-wallet" }
sha3 = { workspace = true }
zeroize = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }

# HTTP client for exchange APIs
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# URL and JSON handling
url = "2.5"
base64 = "0.22"

# Cryptographic HMAC for API signatures
hmac = "0.12"
sha2 = "0.10"

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# Async trait support
async-trait = "0.1"

# Configuration
toml = "0.8"

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3.8"
tokio-test = "0.4"
mockito = "1.2"

[features]
default = ["binance", "coinbase", "kraken", "okx"]
binance = []
coinbase = []
kraken = []
okx = []
all-exchanges = ["binance", "coinbase", "kraken", "okx"]