[package]
name = "quid-extensions"
version = "0.1.0"
edition = "2021"
description = "Standard extensions for QuID identities"

[dependencies]
quid-core = { path = "../quid-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha3 = { workspace = true }
secrecy = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
# Add test dependencies as needed
