[package]
name = "quid-node"
version = "0.1.0"
edition = "2021"
description = "QuID network node daemon"

[dependencies]
quid-core = { path = "../quid-core" }
quid-consensus = { path = "../quid-consensus" }
quid-network = { path = "../quid-network" }
tokio = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"

# Networking
libp2p = "0.53"
