[package]
name = "quid-nostr"
version = "0.1.0"
edition = "2021"
description = "QuID Nostr protocol integration for decentralized identity and messaging"
license = "MIT OR Apache-2.0"

[dependencies]
# Inherit from workspace
quid-core = { path = "../quid-core" }
sha3 = { workspace = true }
zeroize = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }

# Cryptographic primitives
sha2 = "0.10"
hmac = "0.12"

# Networking
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tungstenite = "0.20"
tokio-tungstenite = "0.20"
url = "2.4"

# Async trait support
async-trait = "0.1"

# Configuration
toml = "0.8"

# Serialization
bincode = "1.3"
base64 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3.8"
tokio-test = "0.4"
criterion = "0.5"

[features]
default = ["client", "relay"]
client = []
relay = []
nip-extensions = []
encrypted-dm = []
zap-payments = []

