[package]
name = "quid-nym-adapter"
version = "0.1.0"
edition = "2021"
description = "QuID adapter for Nym blockchain integration with privacy features"
license = "MIT OR Apache-2.0"

[dependencies]
# Inherit from workspace
quid-core = { path = "../quid-core" }
# quid-blockchain = { path = "../quid-blockchain" }  # Temporarily disabled
sha3 = { workspace = true }
zeroize = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }

# Cryptographic primitives (simplified for compatibility)
# ed25519-dalek = "2.1"
# curve25519-dalek = "4.1"
# blake3 = "1.5"

# Privacy features (temporarily disabled due to edition2024 issues)
# merlin = "3.0"  # For zero-knowledge proofs
# bulletproofs = "4.0"  # For range proofs

# Async trait support
async-trait = "0.1"

# Configuration
toml = "0.8"

# Serialization
bincode = "1.3"
base64 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3.8"
tokio-test = "0.4"
criterion = "0.5"


[features]
default = ["privacy-features", "smart-contracts"]
privacy-features = []
smart-contracts = []
testnet = []
mainnet = []