[package]
name = "quid-ssh"
version = "0.1.0"
edition = "2021"
authors = ["Nym Corporation <dev@nymtech.net>"]
license = "MIT"
description = "SSH integration for QuID quantum-resistant authentication"
homepage = "https://github.com/nym-corp/quid"
repository = "https://github.com/nym-corp/quid"
keywords = ["ssh", "authentication", "quantum-resistant", "security", "quid"]
categories = ["authentication", "cryptography", "network-programming"]

[dependencies]
# Core QuID dependencies
quid-core = { path = "../quid-core" }

# SSH protocol implementation
russh = "0.40"
russh-keys = "0.40"
russh-sftp = "1.0"

# Cryptography
sha2 = "0.10"
base64 = "0.21"
hex = "0.4"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Configuration and paths
dirs = "5.0"
clap = { version = "4.0", features = ["derive"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"
serial_test = "3.0"

[[bin]]
name = "quid-ssh-client"
path = "src/bin/client.rs"

[[bin]]
name = "quid-ssh-server"
path = "src/bin/server.rs"

[[bin]]
name = "quid-ssh-migrate"
path = "src/bin/migrate.rs"

[features]
default = ["client", "server"]
client = []
server = []
migration = []