[package]
name = "quid-zkp"
version = "0.1.0"
edition = "2021"
description = "QuID Zero-Knowledge Proof integration for privacy-preserving authentication and verification"
license = "0BSD"

[dependencies]
# Inherit from workspace
quid-core = { path = "../quid-core" }
sha3 = { workspace = true }
zeroize = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }

# Cryptographic primitives
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"

# Zero-knowledge proof systems (simplified implementations)
# Note: In production, use proper ZK libraries like arkworks, bellman, etc.
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"

# Merkle trees for commitment schemes
merkle = "1.0"

# Async trait support
async-trait = "0.1"

# Configuration
toml = "0.8"

# Serialization
bincode = "1.3"
base64 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3.8"
tokio-test = "0.4"
criterion = "0.5"

[features]
default = ["zk-snarks", "zk-starks", "bulletproofs"]
zk-snarks = []
zk-starks = []
bulletproofs = []
plonk = []
groth16 = []
commitment-schemes = []
range-proofs = []